--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,9 +13,12 @@
     "@tailwindcss/cli": "^4.0.6",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3"
   },
