--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "nodemailer": "^6.10.0"
   }
 }
