--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 PORT = 8080
 MONGO_CONN="mongodb+srv://padma:pa123@cluster0.aah6f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET = "secret-123"
+EMAIL_USER=haniisthebest4@gmail.com
+EMAIL_PASSWORD=Hani09@2006
