--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,4 @@ MONGO_CONN="mongodb+srv://padma:pa123@cluster0.aah6f.mongodb.net/?retryWrites=tr
 JWT_SECRET = "secret-123"
 EMAIL_USER=haniisthebest4@gmail.com
 EMAIL_PASSWORD=Hani09@2006
+FRONTEND_URL=https://techconnectfrontend.azurewebsites.net/
