--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index.js",
+    "client": "cd Frontend && npm run dev",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "azure": "NPM_CONFIG_PRODUCTION=false npm install --prefix Frontend && npm run build --prefix Frontend && npm run server"
   },
   "keywords": [],
   "author": "",
